--- a/studenthome.html
+++ b/studenthome.html
@@ -73,9 +73,9 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="#" class="selected">StudentHome</a></li>
-<li class="sh-profile"><a href="#">Profile</a></li>
-<li class="sh-study"><a href="#" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
+<li class="sh-home"><a href="studenthome.html" class="selected">StudentHome</a></li>
+<li class="sh-profile"><a href="profile.html">Profile</a></li>
+<li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
 </ul>
@@ -113,7 +113,7 @@ ioe_createmenus();
 	<h2>Profile<a class="toggle-link" href="#" id="mtnl1a"></a></h2>
 	<div id="mtnl1b" class="motion"><div class="body">
 		<ul>
-		<li><span class="nolnk">Your personal identifier: U2415726</span></li>
+		<li><span class="nolnk">Your personal identifier: 012345678</span></li>
 			<li><a href="#" class="break">kapil.dev@hotmail<span>. </span>com</a></li><li><a href="#">View emails sent by us recently</a></li><li><a href="#">Update personal details</a></li><li><a href="#">Study record</a></li>
 		</ul>
 	</div></div>
@@ -184,14 +184,15 @@ if (typeof window.InitQualAjax=='function')InitQualAjax('l4',1,'L');
 
 
 <div class="panel-group">
-<h1>Professional Diploma in Management (D64)</h1>
+<h1>BA (Honours) Humanities</h1>
 
 
+<!--
 <div class="prompt loan">
 	<h2>Book your next tutorial</h2>
 	<p>It's time to book a place on the next tutorial. Visit <a href="tutorials.html" id="ctl00_cphCEN_ctl00_hypLoanContinuing">Your Tutorials</a> to see available dates.</p>
 </div>
-
+-->
 
 
 
@@ -201,7 +202,7 @@ if (typeof window.InitQualAjax=='function')InitQualAjax('l4',1,'L');
         <img src="img/qualsonline2.jpg" width="206" height="140" alt="" />
     </div>
     <div class="qorhs2">
-        <p><a class="go" href="#">Professional Diploma in Management (D64)</a></p>
+        <p><a class="go" href="#">BA (Honours) Humanities</a></p>
     </div></div>
     <p style="clear:both"></p>
 </div>
@@ -216,9 +217,9 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('KQoLQ79',1);
 <div class="panel">
 	
     <ul class="body">
-        <li><a href="#">View your study record for Professional Diploma in Management (D64)</a></li>
+        <li><a href="#">View your study record for BA (Honours) Humanities</a></li>
         <li><a href="#">Student Support Team</a></li>
-        <li><a href="tutorials.html">Your tutorials</a></li>
+        <li></li>
     </ul>
     
 </div>
@@ -226,15 +227,15 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('KQoLQ79',1);
 	
 
 <div class="panel">
-	<h2><a class="toggle-link2" href="#" id="mtnW10214Ja"></a><a href="#">B716 Management: Perspectives and Practice</a></h2>
+	<h2><a class="toggle-link2" href="#" id="mtnW10214Ja"></a><a href="#">L185: English for academic purposes online</a></h2>
 	<div id="mtnW10214Jb" class="motion">
 	
-    <ul class="body">
-	<li><a href="#">B716 module website &amp; record</a></li>
+<ul class="body">
+<li><a href="#">L185 module website &amp; record</a></li>
 <li><a href="#">Online TMA/EMA service</a></li>
 <li><a href="#">Assessment</a></li>
 <li><a href="#">Tutor</a></li>
-<li><a href="tutorials-b716.html">Tutorial dates</a></li>
+<li><a href="#">Tutorial dates</a></li>
 <li><a href="#">Examination details</a></li>
 <li><a href="#">Study materials despatch dates</a></li>
 <li><a href="#">Student Support Team</a></li>
@@ -244,15 +245,15 @@ if (typeof window.InitModuleAjax=='function')InitModuleAjax('KQoLQ79',1);
 
 
 <div class="panel">
-  <h2><a class="toggle-link2" href="#" id="mtnW10214Ja"></a><a href="#">B839 Making a difference: the management initiative</a></h2>
+  <h2><a class="toggle-link2" href="#" id="mtnW10214Ja"></a><a href="#">A105: Voices, texts and material culture</a></h2>
   <div id="mtnW10214Jb" class="motion">
   
-    <ul class="body">
-  <li><a href="#">B839 module website &amp; record</a></li>
+<ul class="body">
+<li><a href="#">A105 module website &amp; record</a></li>
 <li><a href="#">Online TMA/EMA service</a></li>
 <li><a href="#">Assessment</a></li>
 <li><a href="#">Tutor</a></li>
-<li><a href="tutorials-b839.html">Tutorial dates</a></li>
+<li><a href="#">Tutorial dates</a></li>
 <li><a href="#">Examination details</a></li>
 <li><a href="#">Study materials despatch dates</a></li>
 <li><a href="#">Student Support Team</a></li>
