--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ hr {margin:2em 0; padding:0;}
 <p>Content to come.</p>
 <ul>
   <li><a href="studenthome.html">StudentHome</a></li>
+  <li><a href="profile.html">Profile</a></li>
 </ul>
 
 
