study rec content

--- a/study-record.html
+++ b/study-record.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no" />
 </head>
 
-<body class="ou-wide ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
+<body class="ou-ia-learning ou-blend study r2r3 sh-profile ou-mobile" onload="boot()">
 <script type="text/javascript">if (typeof window.ou_sitestat=='function')ou_sitestat();</script>
 <!--<script type="text/javascript" src="includes/headers-footers/ou-cookie-policy.js"></script>-->
 <div id="ou-org-header"> <a class="ou-skip" href="#">Skip to content</a> <a class="ou-link-ou" href="#"><img src="includes/headers-footers/oulogo-56.jpg" alt="The Open University" /></a>
@@ -88,13 +88,72 @@
 
 <div class="inview">
 
+<h2>Enrol on modules</h2>
+<p>You can now enrol on modules starting between 1st September 2015 and 31st August 2016.</p>
+<p><a href="#">Choose next modules &gt;</a></p>
 
-<p>Coming soon</p>
+<hr>
+
+<h2>BA (Honours) Humanities</h2>
+<p>Status: in progress</p>
+<p>Credits: 120 of 360</p>
+<h3>Modules in progress</h3>
+<ul>
+  <li><a href="#">L185 English for academic purposes online</a></li>
+  <li><a href="#">A105 Voices, texts and material culture</a></li>
+  </ul>
+<h3>Completed modules</h3>
+<ul>
+  <li><a href="#">  L192 Bon depart: beginners&rsquo; French</a> -- Distinction </li>
+  <li><a href="#">U101 Design thinking: creativity for the 21st Century</a> -- Pass </li>
+  </ul>
+<p>Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
+
+<hr>
+
+<h2>Bachelor of Science (Honours)</h2>
+<p>Status: complete</p>
+<p>Credits: 360 of 360</p>
+
+<hr>
+
+<h2>Other modules</h2>
+
+<h3>Completed modules</h3>
+<ul>
+  <li><a href="#">U123 Astronomy</a> -- Pass</li>
+  <li><a href="#">G123 Cell biology</a> -- Pass</li>
+  </ul>
+<p>Download your <a href="#">Statement of Academic Record</a> for your Astronomy and Cell biology modules</p>
+
+
 <p><a href="profile.html">Back to Profile</a></p>
+
 </div>
 
 </div>
 </div>
+
+<div class="r3 aside">
+<h2>How do I?</h2>
+
+<ul>
+  <li><a href="#">Change my qualification?</a></li>
+  <li><a href="#">Change my module?</a></li>
+  <li><a href="#">Take a break from my studies</a>?</li>
+  <li><a href="#">Apply for a tuition fee loan?</a></li>
+  <li><a href="#">Get help studying for a disability?</a></li>
+  </ul>
+<p><a href="#">Get more from the Help Centre</a></p>
+<h2>Downloads</h2>
+<ul>
+  <li><a href="#">Student Academic Summary</a></li>
+  <li><a href="#">Conditions of registration</a></li>
+  <li><a href="#">Fee rules</a></li>
+  <li><a href="#">General Qualifications Regulations</a></li>
+</ul>
+</div>
+
 </div>
 </div>
 <div id="ou-org-footer">
