study rec design start

--- a/study-record.html
+++ b/study-record.html
@@ -88,9 +88,11 @@
 
 <div class="inview">
 
-<h2>Enrol on modules</h2>
-<p>You can now enrol on modules starting between 1st September 2015 and 31st August 2016.</p>
-<p><a href="#">Choose next modules &gt;</a></p>
+<div class="box-alert">
+    <h2>Enrol on modules</h2>
+    <p>You can now enrol on modules starting between 1st September 2015 and 31st August 2016.</p>
+    <p><a href="#" class="ou-btn">Choose next modules</a></p>
+</div>
 
 <hr>
 
@@ -135,16 +137,22 @@
 </div>
 
 <div class="r3 aside">
-<h2>How do I?</h2>
 
+
+<div class="box">
+<h2>How do I?</h2>
 <ul>
   <li><a href="#">Change my qualification?</a></li>
   <li><a href="#">Change my module?</a></li>
   <li><a href="#">Take a break from my studies</a>?</li>
   <li><a href="#">Apply for a tuition fee loan?</a></li>
   <li><a href="#">Get help studying for a disability?</a></li>
-  </ul>
+</ul>
+  
 <p><a href="#">Get more from the Help Centre</a></p>
+</div>
+
+<div class="box">
 <h2>Downloads</h2>
 <ul>
   <li><a href="#">Student Academic Summary</a></li>
@@ -152,6 +160,8 @@
   <li><a href="#">Fee rules</a></li>
   <li><a href="#">General Qualifications Regulations</a></li>
 </ul>
+</div>
+
 </div>
 
 </div>
