study record design

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@ hr {margin:2em 0; padding:0;}
   <li><a href="studenthome.html">StudentHome</a></li>
   <li><a href="profile.html">Profile</a></li>
 </ul>
+<h2>Study record</h2>
+<ul>
+  <li><a href="study-record-a.html">Persona A - Kapil Dev</a> - The &lsquo;normal/ideal&rsquo; student who is halfway through a qual</li>
+  <li>Persona B - Wassim Akram - The resit student</li>
+  <li>Persona C - Sally Gunnel - The new student</li>
+</ul>
+<p>&nbsp;</p>
 
 
 </body>
