--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
 <div class="inview">
 
   <ul>
-    <li><a href="study-record.html">Study record</a>*</li>
+    <li><a href="study-record-a.html">Study record</a>*</li>
     <li><a href="your-contact-details.html">Your contact details</a>*</li>
     <li><a href="your-previous-edu-bg.html">Your previous education and background</a>*</li>
     <li><a href="your-current-occupation-study.html">Your current occupation and study motivation</a>*</li>
