--- a/study-record-a.html
+++ b/study-record-a.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Tutorials - Open University</title>
+<title>Study record - Open University</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
@@ -96,37 +96,97 @@
 
 <hr>
 
-<h2>BA (Honours) Humanities</h2>
-<p>Status: in progress</p>
-<p>Credits: 120 of 360</p>
+
+
+<div class="box-qual">
+
+<h2>BA (Honours) Humanities <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+
+
+<div class="box-qual-inner">
+
+<ul class="qual-details">
+  <li><strong>Status</strong>: in progress</li>
+  <li><strong>Credits</strong>: 120 of 360</li>
+  <li><a href="#">See qualification website</a></li>
+</ul>
+
 <h3>Modules in progress</h3>
-<ul>
-  <li><a href="#">L185 English for academic purposes online</a></li>
-  <li><a href="#">A105 Voices, texts and material culture</a></li>
-  </ul>
-<h3>Completed modules</h3>
-<ul>
-  <li><a href="#">  L192 Bon depart: beginners&rsquo; French</a> -- Distinction </li>
-  <li><a href="#">U101 Design thinking: creativity for the 21st Century</a> -- Pass </li>
-  </ul>
-<p>Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
-<hr>
-
-<h2>Bachelor of Science (Honours)</h2>
-<p>Status: complete</p>
-<p>Credits: 360 of 360</p>
-
-<hr>
-
-<h2>Other modules</h2>
+<table>
+  <tr>
+    <td><a href="#">L185 English for academic purposes online</a></td>
+  </tr>
+  <tr>
+    <td><a href="#">A105 Voices, texts and material culture</a></td>
+  </tr>
+</table>
 
 <h3>Completed modules</h3>
-<ul>
-  <li><a href="#">U123 Astronomy</a> -- Pass</li>
-  <li><a href="#">G123 Cell biology</a> -- Pass</li>
-  </ul>
-<p>Download your <a href="#">Statement of Academic Record</a> for your Astronomy and Cell biology modules</p>
+
+<table>
+  <tr>
+    <td><a href="#"> L192 Bon depart: beginners&rsquo; French</a></td>
+    <td>Distinction</td>
+  </tr>
+  <tr>
+    <td><a href="#">U101 Design thinking: creativity for the 21st Century</a></td>
+    <td>Pass</td>
+  </tr>
+</table>
+
+<p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
+
+</div> <!-- end box-qual-inner -->
+</div> <!-- end box-qual -->
+
+
+
+
+
+<div class="box-qual collapsed">
+
+<h2>Bachelor of Science (Honours) <a href="#" class="show-hide plus">Expand/collapse</a></h2>
+
+<!-- collapsed in demo
+<div class="box-qual-inner">
+
+<ul class="qual-details">
+  <li><strong>Status</strong>: complete</li>
+  <li><strong>Credits</strong>: 360 of 360</li>
+  <li><a href="#">See qualification website</a></li>
+</ul>
+
+</div> <!-- end box-qual-inner -->
+</div> <!-- end box-qual -->
+
+
+
+<div class="box-qual">
+
+<h2>Other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+
+<div class="box-qual-inner">
+
+<h3>Completed modules</h3>
+
+<table>
+  <tr>
+    <td><a href="#">U123 Astronomy</a></td>
+    <td>Pass</td>
+  </tr>
+  <tr>
+    <td><a href="#">T456 Evolution of species</a></td>
+    <td>Fail</td>
+  </tr>
+  <tr>
+    <td><a href="#">G123 Cell biology</a></td>
+    <td>Pass</td>
+  </tr>
+</table>
+</div> 
+<!-- end box-qual-inner -->
+</div> <!-- end box-qual -->
 
 
 <p><a href="profile.html">Back to Profile</a></p>
@@ -139,7 +199,7 @@
 <div class="r3 aside">
 
 
-<div class="box">
+<div class="box box-questions">
 <h2>How do I?</h2>
 <ul>
   <li><a href="#">Change my qualification?</a></li>
@@ -149,10 +209,11 @@
   <li><a href="#">Get help studying for a disability?</a></li>
 </ul>
   
-<p><a href="#">Get more from the Help Centre</a></p>
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
 </div>
 
-<div class="box">
+<div class="box box-downloads">
 <h2>Downloads</h2>
 <ul>
   <li><a href="#">Student Academic Summary</a></li>
