setting up our new persona views

--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@ hr {margin:2em 0; padding:0;}
 
 <h1>Study Planning</h1>
 
-<p>Content to come.</p>
+<p>Click below to see a StudentHome for each student then visit the Profile tab and navigate thorugh to the study record.</p>
+
+<h2>Persona experiences</h2>
 <ul>
-  <li><a href="studenthome.html">StudentHome</a></li>
-  <li><a href="profile.html">Profile</a></li>
+  <li><a href="studenthome-a.html">Persona A - Kapil Dev</a> - The &lsquo;normal/ideal&rsquo; student who is halfway through a qual
+  </li>
+  <li><a href="studenthome-b.html">Persona B - Wassim Akram - The resit student</a></li>
+  <li><a href="studenthome-c.html">Persona C - Mithali Raj - The new student</a></li>
+  <li><a href="studenthome-d.html">Persona D - Charlotte Edwards - The assessment banker</a></li>
 </ul>
-<h2>Study record</h2>
-<ul>
-  <li><a href="study-record-a.html">Persona A - Kapil Dev</a> - The &lsquo;normal/ideal&rsquo; student who is halfway through a qual</li>
-  <li>Persona B - Wassim Akram - The resit student</li>
-  <li>Persona C - Sally Gunnel - The new student</li>
-</ul>
-<p>&nbsp;</p>
+
 
 
 </body>
