linked up Kapil

--- a/studenthome-a.html
+++ b/studenthome-a.html
@@ -74,7 +74,7 @@
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
 <li class="sh-home"><a href="studenthome.html" class="selected">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html">Profile</a></li>
+<li class="sh-profile"><a href="profile-a.html">Profile</a></li>
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
@@ -114,7 +114,8 @@ ioe_createmenus();
 	<div id="mtnl1b" class="motion"><div class="body">
 		<ul>
 		<li><span class="nolnk">Your personal identifier: 012345678</span></li>
-			<li><a href="#" class="break">kapil.dev@hotmail<span>. </span>com</a></li><li><a href="#">View emails sent by us recently</a></li><li><a href="#">Update personal details</a></li><li><a href="#">Study record</a></li>
+			<li><a href="#" class="break">kapil.dev@hotmail<span>. </span>com</a></li><li><a href="#">View emails sent by us recently</a></li><li><a href="profile-a.html">Update personal details</a></li>
+      <li><a href="study-record-a.html">Study record</a></li>
 		</ul>
 	</div></div>
 </div>
