more of Kapil's stuff linked up

--- a/your-identity-needs-a.html
+++ b/your-identity-needs-a.html
@@ -62,8 +62,8 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="studenthome.html">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html" class="selected">Profile</a></li>
+<li class="sh-home"><a href="studenthome-a.html">StudentHome</a></li>
+<li class="sh-profile"><a href="profile-a.html" class="selected">Profile</a></li>
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
@@ -77,8 +77,8 @@
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome.html">StudentHome</a></li>
-	<li><a href="profile.html">Profile</a></li>
+	<li><a href="studenthome-a.html">StudentHome</a></li>
+	<li><a href="profile-a.html">Profile</a></li>
 	<li><span class="h1main">Your identity, needs and circumstances</span></li>
 </ol>
 
