--- a/profile-d.html
+++ b/profile-d.html
@@ -62,8 +62,8 @@
 
 <div class="mnuwrap"><div class="sh-header" role="navigation">
 <ul>
-<li class="sh-home"><a href="studenthome.html">StudentHome</a></li>
-<li class="sh-profile"><a href="profile.html" class="selected">Profile</a></li>
+<li class="sh-home"><a href="studenthome-d.html">StudentHome</a></li>
+<li class="sh-profile"><a href="profile-d.html" class="selected">Profile</a></li>
 <li class="sh-study"><a href="study.html" onmouseover="ioe_showmenu(3)" onmouseout="ioe_hidemenu()" onclick="ioe_hidemenu()">Study</a></li>
 <li class="sh-community"><a href="#">Community</a></li>
 <li class="sh-help"><a href="#">Help Centre</a></li>
@@ -77,7 +77,7 @@
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome.html">StudentHome</a></li>
+	<li><a href="studenthome-d.html">StudentHome</a></li>
 	<li>Profile</li>
 </ol>
 
@@ -88,11 +88,11 @@
 <div class="inview">
 
   <ul>
-    <li><a href="study-record-a.html">Study record</a>*</li>
-    <li><a href="your-contact-details.html">Your contact details</a>*</li>
-    <li><a href="your-previous-edu-bg.html">Your previous education and background</a>*</li>
-    <li><a href="your-current-occupation-study.html">Your current occupation and study motivation</a>*</li>
-    <li><a href="your-identity-needs.html">Your identity, needs and cicumstances</a>*</li>
+    <li><a href="study-record-d.html">Study record</a>*</li>
+    <li><a href="your-contact-details-d.html">Your contact details</a>*</li>
+    <li><a href="your-previous-edu-bg-d.html">Your previous education and background</a>*</li>
+    <li><a href="your-current-occupation-study-d.html">Your current occupation and study motivation</a>*</li>
+    <li><a href="your-identity-needs-d.html">Your identity, needs and cicumstances</a>*</li>
     <li><a href="#">Online appearance</a></li>
     <li><a href="#">Preferred settings</a></li>
     <li><a href="#">Change your password</a></li>
