fixed mithalis name

--- a/studenthome-c.html
+++ b/studenthome-c.html
@@ -105,7 +105,7 @@ ioe_createmenus();
 	<div class="r1 aside">
 		<div class="static">
 
-<p class="user">Welcome <strong>Kapil</strong></p>
+<p class="user">Welcome <strong>Mithali</strong></p>
 
 
 
