--- a/your-previous-edu-bg-a.html
+++ b/your-previous-edu-bg-a.html
@@ -125,7 +125,7 @@
       <td><a href="#">Edit</a></td>
     </tr>
   </table>
-<p><a href="profile.html">Back to Profile</a></p>
+<p><a href="profile-a.html">Back to Profile</a></p>
 </div>
 
 </div>
