module record shell

--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@ hr {margin:2em 0; padding:0;}
 
 <h2>Persona experiences</h2>
 <ul>
-  <li><a href="studenthome-a.html">Persona A - Kapil Dev</a> - The &lsquo;normal/ideal&rsquo; student who is halfway through a qual
+  <li><a href="studenthome-a.html">Persona A - Kapil Dev - The &lsquo;normal/ideal&rsquo; student who is halfway through a qual</a>
+
+<ul>
+<li><a href="profile-a.html">Profile</a></li>
+<li><a href="study-record-a.html">Your study record</a></li>
+<li><a href="module-record-a.html">Your module record</a></li>
+<li><a href="your-contact-details-a.html">Your contact details</a></li>
+<li><a href="your-current-occupation-study-a.html">Your current occupation and study motivation</a></li>
+<li><a href="your-identity-needs-a.html">Your identity, needs and circumstances</a></li>
+<li><a href="your-loan-a.html">Your student loan</a></li>
+<li><a href="your-previous-edu-bg-a.html">Your previous education and background</a></li>
+</ul>
+
   </li>
   <li><a href="studenthome-b.html">Persona B - Wassim Akram - The resit student</a></li>
   <li><a href="studenthome-c.html">Persona C - Mithali Raj - The new student</a></li>
