added a second module record for Kapil

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ hr {margin:2em 0; padding:0;}
 <ul>
 <li><a href="profile-a.html">Profile</a></li>
 <li><a href="study-record-a.html">Your study record</a></li>
-<li><a href="module-record-a.html">Your module record</a></li>
+<li><a href="module-record-a-t276.html">Your module record - T276</a></li>
+<li><a href="module-record-a-t218.html">Your module record - T218</a></li>
 <li><a href="your-contact-details-a.html">Your contact details</a></li>
 <li><a href="your-current-occupation-study-a.html">Your current occupation and study motivation</a></li>
 <li><a href="your-identity-needs-a.html">Your identity, needs and circumstances</a></li>
