linked Kapil's study record to his module record

--- a/study-record-a.html
+++ b/study-record-a.html
@@ -162,14 +162,14 @@ $(document).ready(function(){
 
 <h3>Enrolled modules</h3>
 
-<p class="loan-text">Student Finance England (SFE) has approved a <a href="#">loan for 2015/2016</a>.</p>
+<p class="loan-text">Student Finance England (SFE) has approved a <a href="your-loan-a.html">loan for 2015/2016</a>.</p>
 
 <table>
   <tr>
-    <td><a href="module-record-a.html">Engineering: professions, practice and skills 2 (T276)</a></td>
+    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
   </tr>
   <tr>
-    <td><a href="#">Design for engineers (T218)</a></td>
+    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
   </tr>
 </table>
 
@@ -178,7 +178,7 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="#"> Engineering: mechanics, materials, design (T207)</a></td>
+    <td><a href="module-record-a-t207.html"> Engineering: mechanics, materials, design (T207)</a></td>
     <td>2014</td>
     <td>Grade 3 pass</td>
   </tr>
