enrolled mod design

--- a/study-record-a.html
+++ b/study-record-a.html
@@ -135,7 +135,7 @@ $(document).ready(function(){
 
 <div class="box-qual-inner">
 
-<ul class="qual-details">
+<ul class="list-style1">
   <li><strong>Code</strong>: Q65</li>
   <li><strong>Status</strong>: in progress</li>
   <li><strong>Credits</strong>: 180 of 360</li>
