three more partially completed study records

--- a/study-record-b.html
+++ b/study-record-b.html
@@ -168,10 +168,10 @@ $(document).ready(function(){
 
 <table>
   <tbody><tr>
-    <td><a href="module-record-a-t276.html">Introducing health sciences: a case study approach (SDK125)</a></td>
+    <td><a href="module-record-b-sdk125.html">Introducing health sciences: a case study approach (SDK125)</a></td>
   </tr>
   <tr>
-    <td><a href="module-record-a-t218.html">Health sciences in practice (S110)</a></td>
+    <td><a href="module-record-b-s110.html">Health sciences in practice (S110)</a></td>
   </tr>
 </tbody></table>
 
