--- a/study-record-c.html
+++ b/study-record-c.html
@@ -130,23 +130,22 @@ $(document).ready(function(){
 
 <div class="box-qual">
 
-<h2>Bachelor of Engineering (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+<h2>BA (Honours) Combined Social Sciences <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-qual-inner">
 
 <ul class="qual-details">
-  <li><strong>Code</strong>: Q65</li>
+  <li><strong>Code</strong>: Q69</li>
   <li><strong>Status</strong>: in progress</li>
-  <li><strong>Credits</strong>: 180 of 360</li>
-  <li><strong>Pathway</strong>: Engineering design</li>
+  <li><strong>Credits</strong>: 0 of 360</li>
   <li><a href="#">See qualification website</a></li>
 </ul>
 
 <table class="qual-progress">
   <tr>
     <td colspan="3">
-    <div class="progress-bar"><span class="progress" style="width:50%;">50%</span></div>
+    <div class="progress-bar"><span class="progress" style="width:15%;">15%</span></div>
     </td>
     </tr>
   <tr>
@@ -162,47 +161,14 @@ $(document).ready(function(){
 
 <h3>Enrolled modules</h3>
 
-<p class="loan-text">Student Finance England (SFE) has approved a <a href="your-loan-a.html">loan for 2015/2016</a>.</p>
 
 <table>
   <tr>
-    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
-  </tr>
-  <tr>
-    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
+    <td><a href="module-record-c-dd102.html">Introducing the social sciences (DD102)</a></td>
   </tr>
 </table>
 
 
-<h3>Completed modules</h3>
-
-<table>
-  <tr>
-    <td><a href="module-record-a-t207.html"> Engineering: mechanics, materials, design (T207)</a></td>
-    <td>2014</td>
-    <td>Grade 3 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Engineering: professions, practice and skills 1 (T176)</a></td>
-    <td>2014</td>
-    <td>Pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Exploring mathematics (MS221)</a></td>
-    <td>2013</td>
-    <td>Grade 4 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Using mathematics (MST121)</a></td>
-    <td>2013</td>
-    <td>Grade 3 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Engineering the future (T173)</a></td>
-    <td>2012</td>
-    <td>Distinction</td>
-  </tr>
-</table>
 
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
@@ -213,13 +179,9 @@ $(document).ready(function(){
 <dt>Qualification End Date</dt>
 
 <dd>
-<p>This qualification has to be completed within 12 years. Your first credit counting towards this qualification is dated 06-Oct-2012 which means that you must complete this qualification by 06-Oct-2024.</p>
+<p>This qualification has to be completed within 16 years. Your first credit counting towards this qualification is dated 03-Oct-2015 which means that you must complete this qualification by 03-Oct-2031.</p>
 </dd>
 
-<dt>Residential School Fees</dt>
-<dd>
-<p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
-</dd>
 
 <dt>Statement of Academic Record</dt>
 <dd>
