--- a/study-record-d.html
+++ b/study-record-d.html
@@ -130,23 +130,22 @@ $(document).ready(function(){
 
 <div class="box-qual">
 
-<h2>Bachelor of Engineering (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+<h2>BA (Honours) Philosophy and Psychological Studies (Q43) <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-qual-inner">
 
 <ul class="qual-details">
-  <li><strong>Code</strong>: Q65</li>
-  <li><strong>Status</strong>: in progress</li>
-  <li><strong>Credits</strong>: 180 of 360</li>
-  <li><strong>Pathway</strong>: Engineering design</li>
-  <li><a href="#">See qualification website</a></li>
+  <li><strong>Code</strong>: Q45</li>
+  <li><strong>Status</strong>: deferred with assessment banking</li>
+  <li><strong>Credits</strong>: 0 of 360</li>
+    <li><a href="#">See qualification website</a></li>
 </ul>
 
 <table class="qual-progress">
   <tr>
     <td colspan="3">
-    <div class="progress-bar"><span class="progress" style="width:50%;">50%</span></div>
+    <div class="progress-bar"><span class="progress" style="width:0%;">0%</span></div>
     </td>
     </tr>
   <tr>
@@ -162,49 +161,14 @@ $(document).ready(function(){
 
 <h3>Enrolled modules</h3>
 
-<p class="loan-text">Student Finance England (SFE) has approved a <a href="your-loan-a.html">loan for 2015/2016</a>.</p>
-
-<table>
-  <tr>
-    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
-  </tr>
-  <tr>
-    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
-  </tr>
-</table>
 
 
-<h3>Completed modules</h3>
+<p>[gc: not enrolled yet, assessment bank stuff?]</p>
 
-<table>
-  <tr>
-    <td><a href="module-record-a-t207.html"> Engineering: mechanics, materials, design (T207)</a></td>
-    <td>2014</td>
-    <td>Grade 3 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Engineering: professions, practice and skills 1 (T176)</a></td>
-    <td>2014</td>
-    <td>Pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Exploring mathematics (MS221)</a></td>
-    <td>2013</td>
-    <td>Grade 4 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Using mathematics (MST121)</a></td>
-    <td>2013</td>
-    <td>Grade 3 pass</td>
-  </tr>
-  <tr>
-    <td><a href="#">Engineering the future (T173)</a></td>
-    <td>2012</td>
-    <td>Distinction</td>
-  </tr>
-</table>
 
-<p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
+
+
+<p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Philosophy and Psychological Studies (Q43) qualification</p>
 
 <hr>
 
@@ -255,15 +219,6 @@ $(document).ready(function(){
 
 
 
-<!--
-
-<div class="box-qual collapsed">
-
-<h2>Bachelor of Science (Honours) <a href="#" class="show-hide plus">Expand/collapse</a></h2>
-
-</div> 
-
-
 
 <div class="box-qual">
 
@@ -275,17 +230,19 @@ $(document).ready(function(){
 
 <table>
   <tr>
-    <td><a href="#">U123 Astronomy</a></td>
+    <td><a href="#">DE100 Investigating psychology 1 (2014)</a></td>
     <td>Pass</td>
   </tr>
+  
+</table>
+
+<h3>Cancelled modules</h3>
+
+<table>
   <tr>
-    <td><a href="#">T456 Evolution of species</a></td>
-    <td>Fail</td>
+    <td><a href="#">E102 Introduction to childhood studies and child psychology (2014)</a></td>
   </tr>
-  <tr>
-    <td><a href="#">G123 Cell biology</a></td>
-    <td>Pass</td>
-  </tr>
+  
 </table>
 
 </div> 
