two more study records

--- a/index.html
+++ b/index.html
@@ -36,12 +36,31 @@ hr {margin:2em 0; padding:0;}
 </ul>
 
   </li>
-  <li><a href="studenthome-b.html">Persona B - Wassim Akram - The resit student</a></li>
-  <li><a href="studenthome-c.html">Persona C - Mithali Raj - The new student</a></li>
-  <li><a href="studenthome-d.html">Persona D - Charlotte Edwards - The assessment banker</a></li>
+  <li><a href="studenthome-b.html">Persona B - Wassim Akram - The resit student</a>
+<ul>
+<li><a href="study-record-b.html">Your study record</a></li>
+</ul>
+  </li>
+  <li><a href="studenthome-c.html">Persona C - Mithali Raj - The new student</a>
+  <ul>
+<li><a href="study-record-c.html">Your study record</a></li>
+</ul></li>
+  <li><a href="studenthome-d.html">Persona D - Charlotte Edwards - The assessment banker</a>
+  <ul>
+<li><a href="study-record-d.html">Your study record</a></li>
+</ul></li>
+
 </ul>
 
-
+<li><a href="studenthome-e.html">Persona E - The stalled/deferred student</a>
+  <ul>
+<li><a href="study-record-e.html">Your study record</a></li>
+</ul>
+</li>
+<li><a href="studenthome-f.html">Persona F - The lapsed student</a>
+  <ul>
+<li><a href="study-record-f.html">Your study record</a></li>
+</ul></li>
 
 </body>
 </html>
