make profile more user friendly

--- a/profile-a.html
+++ b/profile-a.html
@@ -87,16 +87,24 @@
 
 <div class="inview">
 
+<p>You can view and change your</p>
+
   <ul>
-    <li><a href="study-record-a.html">Study record</a>*</li>
-    <li><a href="your-loan-a.html">Your student loan</a>*</li>
-    <li><a href="your-contact-details-a.html">Your contact details</a>*</li>
-    <li><a href="your-previous-edu-bg-a.html">Your previous education and background</a>*</li>
-    <li><a href="your-current-occupation-study-a.html">Your current occupation and study motivation</a>*</li>
-    <li><a href="your-identity-needs-a.html">Your identity, needs and cicumstances</a>*</li>
-    <li><a href="#">Online appearance</a></li>
-    <li><a href="#">Preferred settings</a></li>
+  <li><a href="your-contact-details-a.html">Contact details</a></li>
+      <li><a href="your-current-occupation-study-a.html">Current occupation and study motivation</a></li>
+          <li><a href="your-identity-needs-a.html">Identity, needs and cicumstances</a></li>
+  <li><a href="your-previous-edu-bg-a.html">Previous education and background</a></li>
+    <li><a href="study-record-a.html">Study record</a></li>
+    <li><a href="your-loan-a.html">Student loan</a></li>
+
+    </ul>
+
+<p>You can also</p>
+    <ul>
     <li><a href="#">Change your password</a></li>
+    <li><a href="#">Edit your online appearance</a></li>
+    <li><a href="#">Set preferences for your online learning environment</a></li>
+    
   </ul>
 
 
