added links to VLE

--- a/profile-a.html
+++ b/profile-a.html
@@ -102,8 +102,8 @@
 <p>You can also</p>
     <ul>
     <li><a href="#">Change your password</a></li>
-    <li><a href="#">Edit your online appearance</a></li>
-    <li><a href="#">Set preferences for your online learning environment</a></li>
+    <li><a href="http://learn2.open.ac.uk/user/profile.php">Edit your online appearance</a></li>
+    <li><a href="http://learn2.open.ac.uk/course/format/studyplan/settings_manage.php">Set preferences for your online learning environment</a></li>
     
   </ul>
 
