added educational aims and learning outcomes

--- a/study-record-a.html
+++ b/study-record-a.html
@@ -208,6 +208,30 @@ $(document).ready(function(){
 <hr>
 
 <dl class="show-hide">
+<dt>Educational aims and learning outcomes</dt>
+<dd>
+   
+    
+    <h3>Educational aims</h3> <p>Professionals working in the IT sector bring many different kinds of expertise to their work. The aim of this degree is to equip you with the knowledge and skills you will need to underpin a career in this sector. As well as developing your knowledge and understanding of the fundamental technologies and techniques and the issues involved in their application, it will also:</p>
+<ul>
+<li>enable you to keep ahead in a rapidly changing subject area by helping you to develop as an independent learner</li>
+<li>develop relevant skills in communication, numeracy, and collaborative working</li>
+<li>imbue the qualities that come with being a graduate in any discipline: specialist knowledge, intellectual self-confidence and independence, analytical ability and the life-long learning skills needed to keep up with fast-changing technologies</li>
+<li>enable you to apply your learning in your private, social and professional life.</li>
+</ul>
+<p>And, depending on the pathway you choose through the degree, you may gain:</p>
+<ul>
+<li>practical experience in the use of information and communication technologies</li>
+<li>an understanding of the types of software and ICT systems that are now being constructed and used, such as distributed internet systems, intelligent systems and databases, and the digital network that underlies the internet itself</li>
+<li>a grasp of the key concepts of computing and of modern computer systems</li>
+<li>skills in the main tasks that are carried out as software is built and maintained, such as analysis, design, programming and evaluation.&nbsp;</li>
+</ul><h3>Learning outcomes</h3><h4>Knowledge and Understanding</h4><ul><li>a broad critical understanding of the fundamental principles, concepts and techniques underlying Computing and IT</li><li>a range of models and languages to support the analysis and design of Computing and IT systems</li><li>the range of situations in which Computing and IT systems are used, the ways in which people interact with them, and the possibilities and limitations of such systems</li><li>an awareness of major trends in computing and IT and of the implications of these trends</li><li>a critical awareness of the ethical, social and legal issues that can be associated with the development and deployment of Computing and IT systems.</li></ul><h4>Cognitive Skills</h4><ul><li>apply and critically evaluate key computing and IT concepts in a range of contexts</li><li>select and apply appropriate techniques and tools for abstracting, modelling, problem-solving, designing and testing computing and IT systems, and be aware of the limitations involved</li><li>compare, contrast, critically analyse and refine specifications and implementations of software systems and/or simple hardware systems</li><li>devise and carry out a project in computing and IT that applies and extends your knowledge and understanding, and critically reflect on the processes involved and the outcomes of your work.</li></ul><h4>Key Skills</h4><ul><li>communicate information, arguments, ideas and issues clearly and in appropriate ways;, bearing in mind the audience for and the purpose of your communication</li><li>work in a group, communicating effectively in a distance setting where the communication is computer-mediated</li><li>work independently, planning, monitoring, reflecting on and improving your own learning</li><li>find, assess and apply information from a variety of sources, using information technology where necessary</li><li>select and use accurately, appropriate numerical and analytical techniques to solve problems</li><li>recognise and understand a range of technological problems and select suitable techniques for solving them.</li></ul><h4>Practical and/or Professional Skills</h4><ul><li>analyse, design, evaluate and/or test computing and IT systems, using appropriate simulation and modelling tools where appropriate</li><li>plan and organise yourself and your work appropriately, including keeping systematic records of work in progress and outcomes</li><li>demonstrate the ability to undertake ongoing learning in order to keep up to date with computing and IT</li><li>identify and address the ethical, social and legal issues that may arise during the development and use of Computing and IT systems</li><li>use appropriate professional tools to support your work.</li></ul>
+
+
+
+
+
+</dd>
 
 <dt>Qualification End Date</dt>
 
@@ -288,7 +312,7 @@ $(document).ready(function(){
 </table>
 
 </div> 
-</div> <!-- end box-qual -->
+</div> --><!-- end box-qual -->
 
 
 <p><a href="profile.html">Back to Profile</a></p>
