--- a/module-record-a-t207.html
+++ b/module-record-a-t207.html
@@ -95,7 +95,7 @@
   <li><strong>Level</strong>: 2</li>
   <li><strong>Credits</strong>: 60</li>
   <li><a href="#">T207 module description</a></li>
-  <li><a href="#">T207 module website</a></li>
+  <li><a href="#">T207 module website</a> (read only)</li>
 </ul>
 
 
