--- a/module-record-a-t218.html
+++ b/module-record-a-t218.html
@@ -106,6 +106,7 @@
     <p>Registered on 13 March 2015.</p>
     
     <p>While you're waiting to start, look at boosting your <a href="http://www2.open.ac.uk/students/help/topic/study-skills">study skills</a>.</p>
+    <p><a href="#">I want to stop studying this module</a></p>
     
 </div>
 
